// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`request tests bad request unchecked 1`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {
        "X-Correlation-Id": "88888888-8888-8888-8888-888888888888",
        "X-CorrelationId": "88888888-8888-8888-8888-888888888888",
      },
      "method": "GET",
    },
  ],
]
`;

exports[`request tests basic bad request 2`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {
        "X-Correlation-Id": "88888888-8888-8888-8888-888888888888",
        "X-CorrelationId": "88888888-8888-8888-8888-888888888888",
      },
      "method": "GET",
    },
  ],
]
`;

exports[`request tests basic ok 1`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {
        "X-Correlation-Id": "88888888-8888-8888-8888-888888888888",
        "X-CorrelationId": "88888888-8888-8888-8888-888888888888",
      },
      "method": "GET",
    },
  ],
]
`;

exports[`request tests ok with basic auth 1`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {
        "Authorization": "Basic dXNlcm5hbWU6dGVzdC1wYXNzd29yZA==",
        "X-Correlation-Id": "88888888-8888-8888-8888-888888888888",
        "X-CorrelationId": "88888888-8888-8888-8888-888888888888",
      },
      "method": "GET",
    },
  ],
]
`;

exports[`request tests ok with bearer auth 1`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {
        "Authorization": "Bearer test-token",
        "X-Correlation-Id": "88888888-8888-8888-8888-888888888888",
        "X-CorrelationId": "88888888-8888-8888-8888-888888888888",
      },
      "method": "GET",
    },
  ],
]
`;

exports[`request tests ok with lots of options 1`] = `
[
  [
    "https://server/path?hello=world&foo=bar#hashed",
    {
      "headers": {
        "X-Correlation-Id": "88888888-8888-8888-8888-888888888888",
        "X-CorrelationId": "88888888-8888-8888-8888-888888888888",
      },
      "method": "GET",
      "redirect": true,
    },
  ],
]
`;

exports[`request tests ok with no logging 1`] = `
[
  [
    "https://fake-server.com/path",
    {
      "headers": {
        "X-Correlation-Id": "88888888-8888-8888-8888-888888888888",
        "X-CorrelationId": "88888888-8888-8888-8888-888888888888",
      },
      "method": "GET",
    },
  ],
]
`;
